threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/thread_preemption_cahnge/test000024.exec.err
Error: external call with symbolic argument: _txm_module_manager_inside_data_check
File: threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h
Line: 2395
assembly.ll line: 16665
State: 2
Stack: 
	#000016665 in _txm_module_manager_tx_thread_preemption_change_dispatch(module_instance=symbolic, param_0=symbolic, param_1=symbolic, param_2=symbolic) at threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h:2395
	#100007175 in _txm_module_manager_kernel_dispatch(kernel_request=62, param_0=symbolic, param_1=symbolic, param_2=symbolic) at threadx/threadx/common_modules/module_manager/src/txm_module_manager_kernel_dispatch.c:607
	#200000236 in mthread_preemption_change(thread_ptr=symbolic, new_threshold=symbolic, old_threshold=symbolic) at threadx/threadx/common_modules/module_lib/src/txm_thread_preemption_change.c:78
	#300000209 in main() at evaluation_files/thread_preemption_change.c:16
