threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/thread_preemption_cahnge/test000024.kquery
array _tx_thread_current_ptr[8] : w32 -> w8 = symbolic
array lazy_alloc3[432] : w32 -> w8 = symbolic
array lazy_alloc5[2312] : w32 -> w8 = symbolic
(query [(Eq 94345377082432
             (ReadLSB w64 0 _tx_thread_current_ptr))
         (Eq 94345364952064
             (ReadLSB w64 264 lazy_alloc3))
         (Eq false
             (Eq 0
                 (And w64 (ReadLSB w64 24 lazy_alloc5)
                          2)))]
        false)
